<?xml version="1.0"?>
<package>
  <name>twist_vesc</name>
  <version>0.0.1</version>
  <description>The twist_vesc package</description>

  <author>Eric Young</author>
  <maintainer email="youngericey@gmail.com">Eric Young</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>ackermann_msgs</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>ackermann_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
